fix canvas bug on safari

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -48,6 +48,7 @@ a {
 }
 
 header {
+  position: relative;
   height: 100vh;
   display: flex;
   justify-content: center;
